Fixing records tables on mobile

--- a/src/sections/records/style.module.scss
+++ b/src/sections/records/style.module.scss
@@ -102,3 +102,7 @@
 .position {
     @include aligned(left);
 }
+
+.smallFont {
+    @include font-sized(s);
+}
